--- a/amardaan/templates/campaign_details.html
+++ b/amardaan/templates/campaign_details.html
@@ -173,13 +173,14 @@
                   <input type="hidden" id="follow_statusfieild" value="0">
                 </div>
                 <p class="brokersText-4">
-                  <span class="bottom_line P12 text-center d-block">
-                    You only have the opportunity to donate to this campaign before
-                    <span class="end_time" id="endtime">
-                      {{ campaign.camp_deadline }}
+                    <span class="bottom_line P12 text-center d-block">
+                        You only have the opportunity to donate to this campaign before
+                        <span class="end_time" id="endtime">
+                            {{ camp_deadline }}
+                        </span>
                     </span>
-                  </span>
                 </p>
+
               </div>
             </div>
           </div>
