--- a/amardaan/templates/user_profile.html
+++ b/amardaan/templates/user_profile.html
@@ -27,11 +27,11 @@
                     <div class="info-box">
                     <div class="profile-info">
                         <div><strong><p>Name</p></strong></div>
-                        <div><p>Md. Mamun</p></div>
+                        <div><p>{{ user.name }}</p></div>
                         <div><strong><p>Email</p></strong></div>
-                        <div><p>mkmamun031@gmail.com</p></div>
+                        <div><p>{{ user.email}}</p></div>
                         <div><strong><p>Phone</p></strong></div>
-                        <div><p>+880 1643091606</p></div>
+                        <div><p>{{ user.phone}}</p></div>
                         <div><strong><p>Address</p></strong></div>
                         <div><p>Daffodil Smart City, Ashulia, Savar, Dhaka</p></div>
                     </div>
