--- a/AmarDaan/templates/user_form.html
+++ b/AmarDaan/templates/user_form.html
@@ -24,7 +24,8 @@
 </svg></i></a>
         </div>
         <span>or use your email for registration</span>
-        <input class="round" type="text" name="name" placeholder="Name" />
+        <input class="round" type="text" name="firstname" placeholder="First Name" />
+        <input class="round" type="text" name="lastname" placeholder="Last Name" />
         <input class="round" type="email" name="email" placeholder="Email" />
         <input class="round" type="password" name="password" placeholder="Password" />
         <button>Sign Up</button>
