--- a/amardaan/templates/donation_page.html
+++ b/amardaan/templates/donation_page.html
@@ -60,7 +60,7 @@
 
     var numDonors = 0;
     var amountDonated = 0;
-    var goal = 75000;
+    var goal = {{campaign.camp_goal}};
 
     $input.on('input', function () {
         // Get donation amount
