--- a/amardaan/templates/statistics.html
+++ b/amardaan/templates/statistics.html
@@ -128,15 +128,15 @@
                         </svg>                        
                         <span>Help &amp; Center</span>
                     </li>
-                    <li class="side-nav__item">
+                    <li class="side-nav__item" onclick="toggleDarkMode()">
                         <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M7.33309 20.1667H14.6664C18.3514 20.1667 19.0114 18.6908 19.2039 16.8942L19.8914 9.56083C20.1389 7.32417 19.4973 5.5 15.5831 5.5H6.41643C2.50226 5.5 1.86059 7.32417 2.10809 9.56083L2.79559 16.8942C2.98809 18.6908 3.64809 20.1667 7.33309 20.1667Z" stroke="currentColor" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M7.3335 5.49998V4.76665C7.3335 3.14415 7.3335 1.83331 10.2668 1.83331H11.7335C14.6668 1.83331 14.6668 3.14415 14.6668 4.76665V5.49998" stroke="currentColor" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M12.8332 11.9167V12.8333C12.8332 12.8425 12.8332 12.8425 12.8332 12.8517C12.8332 13.8508 12.824 14.6667 10.9998 14.6667C9.18484 14.6667 9.1665 13.86 9.1665 12.8608V11.9167C9.1665 11 9.1665 11 10.0832 11H11.9165C12.8332 11 12.8332 11 12.8332 11.9167Z" stroke="currentColor" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M19.846 10.0833C17.7285 11.6233 15.3085 12.54 12.8335 12.8516" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M2.40186 10.3308C4.46436 11.7425 6.79269 12.595 9.16686 12.8608" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>                        
-                        <span>Dark Mode</span>
+                        </svg>
+                        <span id="dark-mode-text">Dark Mode</span>
                     </li>
                 </ul>
             </div>          
@@ -222,7 +222,7 @@
                                     <path d="M6.22049 10.275H6.22723" stroke="#292D32" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                     <path d="M6.22049 12.525H6.22723" stroke="#292D32" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
-                                <span>1 Jan - 1 Feb 2022</span>       
+                                <span>1 Jan - 1 Dec 2023</span>
                             </div>                                
                         </div>
                         <table class="transaction-history">
@@ -238,12 +238,20 @@
                                     <path d="M9.96004 4.47498L6.70004 7.73498C6.31504 8.11998 5.68504 8.11998 5.30004 7.73498L2.04004 4.47498" stroke="#90A3BF" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
                             </th>
-                            <th>Type
+                            <th>Status
                                 <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M9.96004 4.47498L6.70004 7.73498C6.31504 8.11998 5.68504 8.11998 5.30004 7.73498L2.04004 4.47498" stroke="#90A3BF" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
                             </th>
                         </tr>
+                            {% for tr in transactions %}
+                            <tr>
+                                <td>{{ tr.campaign_name }}</td>
+                                <td>{{ tr.transaction_date }}</td>
+                                <td>{{ tr.donation_amount }}</td>
+                                <td>{{ tr.status }}</td>
+                            </tr>
+                            {% endfor %}
                     </table>
 
                     </div>
@@ -338,6 +346,19 @@
         </main>
         {% endblock %}
     </div>
+<script>
+    // JavaScript function to toggle dark mode
+    function toggleDarkMode() {
+        document.body.classList.toggle('dark-mode');
+        // Update text content based on dark mode state
+        const darkModeText = document.getElementById('dark-mode-text');
+        if (document.body.classList.contains('dark-mode')) {
+            darkModeText.textContent = 'Light Mode';
+        } else {
+            darkModeText.textContent = 'Dark Mode';
+        }
+    }
+</script>
 <script>
 const navItems = document.querySelectorAll('.side-nav__item');
 const removeClasses = () => {
