--- a/AmarDaan/templates/index.html
+++ b/AmarDaan/templates/index.html
@@ -7,7 +7,7 @@
   <div class="header-content">
     <div class="left-content">
       <h1 class="header-title">Welcome to AmarDaan</h1>
-      <p style="text-align: justify;" class="header-description">Empowering Bangladesh through Online Crowdfunding. Initiate the campaign, because supporting and driving effective change. Join us in creating a better future through the simplicity of generosity. Together, we make a difference.</p>
+      <p style="text-align: justify;" class="header-description">{{ settings.about}}</p>
       <button class="btn btn-red" onclick="window.location.href='{{url_for('views.campaign_list')}}'">Donate Now</button>
     </div>
     <div class="right-content">
