--- a/amardaan/static/css/sta_container.css
+++ b/amardaan/static/css/sta_container.css
@@ -31,7 +31,9 @@ body {
     padding: 0 16px;
     overflow: auto;
 }
-
+.logo{
+    width: 150px;
+}
 .sidebar__logo {
     display: flex;
     justify-content: center;
