--- a/amardaan/templates/statistics.html
+++ b/amardaan/templates/statistics.html
@@ -18,8 +18,7 @@
         <nav class="sidebar">            
             <div>
                 <div class="sidebar__logo">
-                    <img src="../static/images/AmarDaanLogo.png" style="width: 32px;">
-                    <h2 class="sidebar__logo-header"><a style="text-decoration: none;" href="{{url_for('views.home')}}">AmarDaan</a></h2>
+                    <a style="text-decoration: none;" href="{{url_for('views.home')}}"> <img class="logo" src="{{ url_for('static', filename=settings.profile_picture) }}"></a>
                 </div>
                 <ul class="side-nav">
                     <span class="side-nav__header">Main Menu</span>
@@ -112,13 +111,16 @@
                 </ul>
     
                 <ul class="side-nav">
+                    <a href="{{ url_for('views.settings') }}" style="text-decoration: none;">
                     <span class="side-nav__header">Preferences</span>
                     <li class="side-nav__item">
                         <svg width="22" height="23" viewBox="0 0 22 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M2.75 8.85081V14.14C2.75 16.0833 2.75 16.0833 4.58333 17.3208L9.625 20.2358C10.3858 20.6758 11.6233 20.6758 12.375 20.2358L17.4167 17.3208C19.25 16.0833 19.25 16.0833 19.25 14.1491V8.85081C19.25 6.91664 19.25 6.91664 17.4167 5.67914L12.375 2.76414C11.6233 2.32414 10.3858 2.32414 9.625 2.76414L4.58333 5.67914C2.75 6.91664 2.75 6.91664 2.75 8.85081Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M11 14.25C12.5188 14.25 13.75 13.0188 13.75 11.5C13.75 9.98122 12.5188 8.75 11 8.75C9.48122 8.75 8.25 9.98122 8.25 11.5C8.25 13.0188 9.48122 14.25 11 14.25Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>                        
+                        </svg>
+                        </a>
                         <span>Settings</span>
+
                     </li>
                     <li class="side-nav__item">
                         <svg width="22" height="23" viewBox="0 0 22 23" fill="none" xmlns="http://www.w3.org/2000/svg">
