Improvements to the campaign details page!

--- a/amardaan/templates/campaign_details.html
+++ b/amardaan/templates/campaign_details.html
@@ -53,7 +53,7 @@
               <div id="profileMain">
                 <div id="profile" class="style-qP541">
                   <a href="/wp-content/uploads/2023/08/8047957/img/cimg_8047957_1692116677.png" data-gal="prettyPhoto[gal]" id="style-SsfCG" class="style-SsfCG">
-                    <img class="img-responsive style-sJOzm" alt="" data-pagespeed-url-hash="2996970203" src="../static/images/header-img-7.jpg" onerror="this.onerror=null;pagespeed.lazyLoadImages.loadIfVisibleAndMaybeBeacon(this);" id="style-sJOzm">
+                    <img style="width: 600px; background-size: cover" alt="" src="{{url_for('static' , filename=campaign.camp_photo)}}" >
                   </a>
                 </div>
               </div>
