--- a/AmarDaan/templates/base.html
+++ b/AmarDaan/templates/base.html
@@ -124,7 +124,8 @@
                         <a href="index.html"><img src="../static/images/logo.png" class="img-fluid" alt="logo"></a>
                     </div>
                     <div class="footer-text">
-                        <p>Empowering Bangladesh through Online Crowdfunding. Initiating campaigns for effective change. Join us in creating a better future through the simplicity of generosity. Together, we make a difference. Join AmarDaan today.</p>
+{#                        <p>Empowering Bangladesh through Online Crowdfunding. Initiating campaigns for effective change. Join us in creating a better future through the simplicity of generosity. Together, we make a difference. Join AmarDaan today.</p>#}
+                        <p>{{ settings.about }}</p>
                     </div>
                 </div>
             </div>
@@ -167,7 +168,7 @@
 <div class="copyright-area">
             <div class="col-xl-6 col-lg-6 text-center">
                 <div class="copyright-text">
-                    <p>Copyright &copy; 2023, All Right Reserved | <a href="https://github.com/MamunKhan71">Md. Mamun</a></p>
+                    <p>Copyright &copy; 2024, All Right Reserved | <a href="https://github.com/MamunKhan71">Md. Mamun</a></p>
             </div>
     </div>
 </div>
